# hps-sim

./: .gitignore  CMakeLists.txt  README.md  mycmake.sh
data/gdml/: target_4um.gdml
data/lcdd/: HPS-EngRun2015-Nominal-v5-0_target.lcdd
filters/: CMakeLists.txt
filters/include/: WabConvFilter.h
filters/src/: WabConvFilter.cxx
include/: BeamPrimaryGenerator.h  EventAction.h  EventSampling.h  EventTransform.h  GpsPrimaryGenerator.h  LHEEvent.h  LHEParticle.h  LHEPrimaryGenerator.h  LHEReader.h  LcioMergeMessenger.h  LcioMergeTool.h  LcioPersistencyManager.h  LcioPersistencyMessenger.h  LcioPrimaryGenerator.h  MCParticleBuilder.h  PGAMessenger.h  PhysicsMessenger.h  PluginLoader.h  PluginManager.h  PluginMessenger.h  PrimaryGenerator.h  PrimaryGeneratorAction.h  PrimaryGeneratorMessenger.h  RunManager.h  SimPlugin.h  SimPluginMessenger.h  StdHepParticle.h  StdHepPrimaryGenerator.h  StdHepPrimaryGenerator.h.bkp  SteppingAction.h  TestGenerator.h  TrackMap.h  Trajectory.h  UnknownDecayPhysics.h  UserEventAction.h  UserPrimaryParticleInformation.h  UserRunAction.h  UserStackingAction.h  UserTrackInformation.h  UserTrackingAction.h  (+2 more)
macros/: beam_selection_test.mac  beam_test.mac  gps.mac  lcio_dump_test.mac  lcio_merge_test.mac  lcio_test.mac  lhe_multi_test.mac  lhe_test.mac  overlay_test.mac  pair_cnv_test.mac  rand_test.mac  sample_test.mac  stdhep_test.mac  transform_test.mac  tri_cnv_test.mac  vis.mac  wab-beam-tri_test.mac
plugins/: BeamTrackSelectionPlugin.cxx  DummySimPlugin.cxx  EventPrintPlugin.cxx  EventPrintPlugin.h  EventPrintPluginMessenger.cxx  EventPrintPluginMessenger.h  PairCnvPlugin.cxx  TridentCnvPlugin.cxx
scripts/: hps-sim-env.sh.in
sim_app/: CMakeLists.txt
sim_app/include/: LHEEvent.h  LHEParticle.h  LHEReader.h  LcioMergeMessenger.h  LcioPersistencyMessenger.h  LcioPrimaryGenerator.h  MCParticleBuilder.h  Parameters.h  PluginLoader.h  PluginManager.h  PrimaryGenerator.h  PrimaryGeneratorAction.h  RunManager.h  SimPluginMessenger.h  UserPrimaryParticleInformation.h  UserStackingAction.h  UserTrackingAction.h  VertexTransform.h
sim_app/macros/: beam_selection_test.mac  geom_check.mac  lcio_dump_test.mac  lcio_merge_test.mac  overlay_test.mac  rand_test.mac  run.mac  sigma_test.mac  stdhep_multi_test.mac
sim_app/src/: BeamPrimaryGenerator.cxx  GpsPrimaryGenerator.cxx  LHEEvent.cxx  LHEParticle.cxx  LHEPrimaryGenerator.cxx  LcioMergeMessenger.cxx  LcioPersistencyManager.cxx  LcioPersistencyMessenger.cxx  PGAMessenger.cxx  PluginLoader.cxx  PluginManager.cxx  PluginMessenger.cxx  PrimaryGeneratorMessenger.cxx  lXDR.cxx
src/: Dummy.cxx  LHEEvent.cxx  LHEParticle.cxx  LHEPrimaryGenerator.cxx  LHEReader.cxx  LcioMergeMessenger.cxx  LcioPersistencyManager.cxx  LcioPersistencyMessenger.cxx  LcioPrimaryGenerator.cxx  MCParticleBuilder.cxx  PGAMessenger.cxx  PhysicsMessenger.cxx  PluginLoader.cxx  PluginManager.cxx  PluginMessenger.cxx  PrimaryGenerator.cxx  PrimaryGeneratorAction.cxx  PrimaryGeneratorMessenger.cxx  RunManager.cxx  SimPluginMessenger.cxx  Trajectory.cxx  UserEventAction.cxx  UserRunAction.cxx  UserStackingAction.cxx  hps-sim.cxx  lStdHep.cxx
